--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "typeface-nunito-sans": "^0.0.72"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
