--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-sitemap": "^2.4.4",
     "gatsby-plugin-styled-components": "^3.3.2",
     "gatsby-plugin-zopfli": "^1.3.2",
+    "gatsby-source-cosmicjs": "^1.1.1",
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
     "linaria": "2.0.0-alpha.1",
@@ -39,6 +40,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-markdown": "^4.3.1",
     "styled-components": "^5.1.0",
     "typeface-nunito-sans": "^0.0.72"
   },
